tests/baselines/reference/decoratorMetadataGenericTypeVariableInScope.errors.txt
decoratorMetadataGenericTypeVariableInScope.ts(5,4): error TS2304: Cannot find name 'Decorate'.
decoratorMetadataGenericTypeVariableInScope.ts(6,3): error TS2564: Property 'member' has no initializer and is not definitely assigned in the constructor.


==== decoratorMetadataGenericTypeVariableInScope.ts (2 errors) ====
    // Unused, but could collide with the named type argument below.
    class TypeVariable {}
    
    export class C<TypeVariable> {
      @Decorate
       ~~~~~~~~
!!! error TS2304: Cannot find name 'Decorate'.
      member: TypeVariable;
      ~~~~~~
!!! error TS2564: Property 'member' has no initializer and is not definitely assigned in the constructor.
    }
    